<resources>
    <string name="app_name">Sofra</string>
    <string name="order_food">طلب طعام</string>
    <string name="sell_food">بيع طعام</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="next">التالي</string>
    <string name="minimum_order">الحد الادني للطلب</string>
    <string name="delivery_fee">رسوم التوصيل</string>
    <string name="register">تسجيل</string>
    <string name="pass">كلمة المرور</string>
    <string name="privcy">جميع الحقوق محفوظة لتطبيق سفرة 2019</string>
    <string name="forget_pass">نسيت كلمة المرور</string>
    <string name="loginplease">تفضل بتسجيل بالدخول</string>
    <string name="enter_ur_mail">برجاء ادخال بريدك الالكتروني</string>
    <string name="mail">البريد الالكتروني</string>
    <string name="login">تسجيل الدخول</string>
    <string name="follow">متابعة</string>
    <string name="enter_cod">برجاء ادخال الكود المرسل اليكم</string>
    <string name="code">#####</string>
    <string name="enter_new_pass">ادخل كلمة المرور الجديدة</string>
    <string name="re_new_pass">اعد ادخال كلمة المرور الجديدة</string>
    <string name="change">تغير</string>
    <string name="search_here">أبحث هنا...</string>
    <string name="add_comment_button">اضف تقييم او تعليق</string>
    <string name="comments_share_text">يسعدنا مشاركتك بتعليق او تقيم</string>
    <string name="status_string">الحالة</string>
    <string name="city_string">المدينة</string>
    <string name="region_text">الحي</string>
    <string name="minimum_order_text">الحد الادني</string>
    <string name="delivery_fee_text">رسوم التوصيل</string>
    <string name="food_name_text">اسم الطعام</string>
    <string name="food_item_details">تفاصيل الطعام</string>
    <string name="price_text">السعر</string>
    <string name="price_50_text">50ريال</string>
    <string name="rate_the_restaurant_text">قيم المطعم</string>
    <string name="comment_edit_text">اضف تعليق</string>
    <string name="add_new_comment_text">اضف</string>
    <string name="restaurant_name_text">اسم المطعم</string>
    <string name="open_now">مفتوح</string>
    <string name="min_order_text">الحد الادني للطلب</string>
    <string name="user_name">اسم المستخدم</string>
    <string name="date_text">التاريخ</string>
    <string name="comments_text">التعليق</string>
    <string name="edit">تعديل</string>
    <string name="delete">حذف</string>
    <string name="add_new_product">اضف منتج جديد</string>
    <string name="product_name">اسم المنتج</string>
    <string name="product_dec">وصف مختصر</string>
    <string name="product_price">السعر</string>
    <string name="product_waiting">مدة تجهيز الطلب</string>
    <string name="add">اضف</string>
    <string name="add_moor">اضافة المزيد</string>
    <string name="total">المجموع</string>
    <string name="address">العنوان</string>
    <string name="copletorder">الطلب مكتمل</string>
    <string name="refuese">رفض</string>
    <string name="accept">قبول</string>
    <string name="add_new_offer">اضف عرض جديد</string>
    <string name="Offer_name">اسم العرض</string>
    <string name="from">المدة من ...</string>
    <string name="to">المدة الي...</string>
    <string name="add_img_to_offer">اضافة صورة للعرض</string>
    <string name="no_result_found">لا يوجد طلبات حالية</string>
    <string name="order_descreption">تفاصيل الطلب</string>
    <string name="add_notes">اضافة محلاحظات</string>
</resources>
