<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_100"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.chauthai.swipereveallayout.SwipeRevealLayout

        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:mode="same_level"
        app:dragEdge="left">

        <!-- Your secondary layout here -->
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/Food_Item_Layout_Edit_"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:textColor="@color/white"
                android:text="@string/edit"
                android:background="@color/green"
                android:id="@+id/Food_Item_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:textColor="@color/white"
                android:text="@string/delete"
                android:layout_marginTop="@dimen/smal"
                android:background="@color/red"
                android:id="@+id/Food_item_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <!-- Your main layout here -->

        <RelativeLayout
            android:id="@+id/Food_Item_Lyout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/Food_Item_img"
                android:layout_width="@dimen/_100"
                android:layout_height="@dimen/_100"
                android:layout_marginStart="@dimen/text_size_xnormal"
                android:layout_marginTop="@dimen/text_size_xnormal"
                android:layout_marginEnd="@dimen/text_size_xnormal"
                android:layout_marginBottom="@dimen/margin_padding_large"
                android:src="@drawable/logo" />

            <TextView
                android:layout_marginTop="@dimen/larg"
                android:id="@+id/food_item_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/Food_Item_img"
                android:ems="10"
                android:gravity="center"
                android:text="@string/food_name_text"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/food_item_tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/food_item_name_text"
                android:layout_toEndOf="@id/Food_Item_img"
                android:ems="10"
                android:gravity="center"
                android:text="@string/food_item_details" />


            <TextView
                android:layout_marginTop="@dimen/larg"
                android:id="@+id/food_item_tv_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/food_item_name_text"
                android:text="@string/price_text"
                android:textColor="@color/black"
                android:textStyle="bold" />





        </RelativeLayout>


    </com.chauthai.swipereveallayout.SwipeRevealLayout>
</RelativeLayout>