<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/smal"
    android:foreground="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/restaurant_card_view_edit"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/restaurant_image_view"
            android:layout_width="@dimen/_100"
            android:layout_height="@dimen/_100"
            android:layout_marginStart="@dimen/text_size_xnormal"
            android:layout_marginTop="@dimen/text_size_xnormal"
            android:layout_marginEnd="@dimen/text_size_xnormal"
            android:layout_marginBottom="@dimen/margin_padding_large"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/food_item_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarg"
            android:layout_toEndOf="@id/restaurant_image_view"
            android:ems="10"
            android:gravity="center"
            android:text="@string/food_name_text"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/food_item_details_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/food_item_name_text"
            android:layout_toEndOf="@id/restaurant_image_view"
            android:ems="10"
            android:gravity="center"
            android:text="@string/food_item_details" />



        <TextView
            android:id="@+id/food_price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xlarg"
            android:layout_marginEnd="@dimen/smal"
            android:layout_toEndOf="@+id/food_item_name_text"
            android:text="@string/price_text"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/My_order_tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/food_price_text_view"
            android:layout_marginTop="@dimen/smal"
            android:layout_marginBottom="@dimen/smal"
            android:layout_toEndOf="@+id/food_item_details_text_view"
            android:text="@string/price_50_text"
            android:textColor="@color/black" />




    </RelativeLayout>




</android.support.v7.widget.CardView>