<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add_new_productFragment">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:inputType="text"
            android:id="@+id/Add_product_tv_name"
            style="@style/margin_items"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xxlarg"
            android:layout_marginTop="@dimen/larg"
            android:background="@drawable/back_login_items"
            android:gravity="center_vertical"
            android:hint="@string/product_name"
            android:paddingEnd="@dimen/medum" />


        <EditText
            android:layout_below="@+id/Add_product_tv_name"
            android:inputType="text"
            android:id="@+id/Add_product_tv_dec"
            style="@style/margin_items"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5xlarg"
            android:layout_marginTop="@dimen/larg"
            android:background="@drawable/back_login_items"
            android:gravity="top"
            android:paddingTop="@dimen/smal"
            android:hint="@string/product_dec"
            android:paddingEnd="@dimen/medum" />

        <EditText
            android:layout_below="@+id/Add_product_tv_dec"
            android:inputType="text"
            android:id="@+id/Add_product_tv_price"
            style="@style/margin_items"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xxlarg"
            android:layout_marginTop="@dimen/larg"
            android:background="@drawable/back_login_items"
            android:gravity="center_vertical"
            android:hint="@string/product_price"
            android:paddingEnd="@dimen/medum" />


        <EditText
            android:layout_below="@+id/Add_product_tv_price"
            android:inputType="text"
            android:id="@+id/Add_product_tv_waiting"
            style="@style/margin_items"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xxlarg"
            android:layout_marginTop="@dimen/larg"
            android:background="@drawable/back_login_items"
            android:gravity="center_vertical"
            android:hint="@string/product_waiting"
            android:paddingEnd="@dimen/medum" />


        <ImageView
            android:id="@+id/Add_product_img"
            android:layout_margin="@dimen/larg"
            android:src="@drawable/nophoto"
            android:layout_below="@+id/Add_product_tv_waiting"
            android:layout_width="@dimen/nav_header_height"
            android:layout_height="@dimen/nav_header_height" />

        <TextView
            android:id="@+id/Add_product_text"
            android:textSize="@dimen/textsize_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Add_product_tv_waiting"
            android:layout_marginTop="@dimen/_100"
            android:layout_toRightOf="@+id/Add_product_img"
            android:text="اضافة صورة للمنتج"
            android:textColor="@color/black" />


        <Button
            android:id="@+id/rest_register"
            style="@style/margin_items"
            android:layout_width="match_parent"
            android:layout_height="@dimen/xxlarg"
            android:layout_below="@+id/Add_product_img"
            android:layout_marginTop="@dimen/larg"
            android:layout_marginBottom="51dp"
            android:background="@color/green"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/medum" />
    </RelativeLayout>
</ScrollView>


</RelativeLayout>