<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/text_size_large"
        android:textColor="@color/black"
        android:id="@+id/rate_restaurant_text_view"
        android:layout_marginTop="@dimen/margin_padding_large"
        android:text="@string/rate_the_restaurant_text"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rating="2"
        android:stepSize="1"
        android:elevation="@dimen/smal"
        android:layout_below="@id/rate_restaurant_text_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/smal"
        android:id="@+id/rating_bar_dialog"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:layout_below="@id/rating_bar_dialog"
        android:gravity="top"
        android:id="@+id/comment_edit_text"
        android:layout_marginTop="@dimen/smal"
        android:padding="@dimen/smal"
        android:hint="@string/comment_edit_text"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/smal"
        android:id="@+id/comment_button"
        android:textSize="@dimen/text_size_large"
        android:layout_marginBottom="@dimen/smal"
        android:layout_marginStart="@dimen/smal"
        android:layout_marginEnd="@dimen/smal"
        android:padding="@dimen/smal"
        android:textColor="@color/white"
        android:background="@color/back_button"

        android:text="@string/add_new_comment_text"/>

</RelativeLayout>